# TP1-Distribuidos

./: .gitignore  CMakeLists.txt  Makefile  README.md  destruir.sh  ips.txt
include/: ICajeroMOM.h  ICajeroMON.h  IClienteMOM.h  IHeladeroMOM.h  MOM_cajero_heladero.h  MOM_server.h  SIG_Trap.h  SignalHandler.h  broker_in.h  broker_out.h  broker_router.h  cajero_handler.h  cliente_handler.h  constructor.h  defines.h  destructor.h  estado_heladeria.h  fifo.h  fifo_escritura.h  fifo_lectura.h  heladero_handler.h  lockfile.h  logger.h  memoria_compartida.h  mensaje_bool.h  mensaje_gustos.h  mensaje_helado.h  mensaje_registro.h  mensaje_semaforo.h  mensaje_ticket.h  message_wrapper.h  msg_queue.h  rpc_wrapper.h  semaforo.h  socket.h  util.h
rpc/: Makefile  rpc.h  rpc.txt  rpc.x  rpc_client.c  rpc_clnt.c  rpc_server  rpc_server.c  rpc_svc.c
src/: MOM_cajero_heladero.c  MOM_register.c  MOM_server.c  SIG_Trap.c  SignalHandler.c  broker.c  broker_in.c  broker_out.c  broker_router.c  cajero.c  cliente.c  constructor_heladeria.c  control.c  destructor_heladeria.c  heladeria.c  heladero.c  workerBroker.c
tests/: SignalHandlerTestMain.c
